--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: apinsee
 Title: Manage Access to Insee APIs
-Version: 0.0.0.9011
+Version: 0.0.0.9012
 Authors@R: c(
     person("Romain", "Lesur", role = c("aut", "cre"), email = "romain.lesur@gmail.com", comment = c(ORCID = "0000-0002-0721-5595")),
     person()
@@ -11,7 +11,8 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     httr (>= 1.4.0),
-    R6
+    R6,
+    rlang (>= 0.3.0)
 RoxygenNote: 6.1.1
 Collate: 
     'endpoint.R'
