implement an api parameter to choose the scope of the application

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(TokenInsee)
 export(insee_auth)
 export(insee_deauth)
 export(insee_endpoint)
+export(insee_scopes)
 export(insee_token)
 importFrom(rlang,":=")
