--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: apinsee
 Title: Manage Access to Insee APIs
-Version: 0.0.0.9031
+Version: 0.0.0.9040
 Authors@R: c(
     person("Romain", "Lesur", role = c("aut", "cre"), email = "romain.lesur@gmail.com", comment = c(ORCID = "0000-0002-0721-5595")),
     person()
@@ -17,6 +17,7 @@ RoxygenNote: 6.1.1
 Collate: 
     'endpoint.R'
     'utils.R'
+    'scope.R'
     'token.R'
     'insee_auth.R'
     'zzz.R'
