--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,31 @@
 Package: apinsee
 Title: Manage Access to Insee APIs
 Version: 0.0.0.9060
-Authors@R: c(
-    person("Romain", "Lesur", role = c("aut", "cre"), email = "romain.lesur@insee.fr", comment = c(ORCID = "0000-0002-0721-5595")),
-    person(family = "Institut National de la Statistique et des Études Économiques (INSEE)", role = "cph")
-    )
+Authors@R: 
+    c(person(given = "Romain",
+             family = "Lesur",
+             role = c("aut", "cre"),
+             email = "romain.lesur@insee.fr",
+             comment = c(ORCID = "0000-0002-0721-5595")),
+      person(family = "Institut National de la Statistique et des Études Économiques (INSEE)",
+             role = "cph"))
 Description: Ease access to Insee APIs.
 License: MIT + file LICENSE
-Encoding: UTF-8
-LazyData: true
+URL: https://github.com/InseeFrLab/apinsee
+BugReports: https://github.com/InseeFrLab/apinsee/issues
 Imports: 
     httr (>= 1.4.0),
     R6,
     rlang (>= 0.3.0)
+Suggests: 
+    covr,
+    curl,
+    httpuv,
+    testthat (>= 2.1.0),
+    usethis
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Collate: 
     'endpoint.R'
@@ -21,10 +34,3 @@ Collate:
     'token.R'
     'insee_auth.R'
     'zzz.R'
-Roxygen: list(markdown = TRUE)
-Suggests: 
-    curl,
-    covr,
-    httpuv,
-    testthat (>= 2.1.0),
-    usethis
