tell travis to use covr and pkgdown

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,12 @@
 
 language: R
 cache: packages
-before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
+r_packages:
+  - covr
+  - pkgdown
+after_success:
+  - Rscript -e 'covr::codecov()'
 deploy:
   provider: script
   script: Rscript -e 'pkgdown::deploy_site_github()'
   skip_cleanup: true
-after_success:
-  - Rscript -e 'covr::codecov()'
