--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
+apt_packages:
+  - libharfbuzz-dev
+  - libfribidi-dev
 cache: packages
 after_success:
   - Rscript -e 'covr::codecov()'
