--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ after_success:
   - Rscript -e 'covr::codecov()'
 deploy:
   provider: script
-  script: Rscript -e 'pkgdown::deploy_site_github()'
+  script: Rscript -e 'pkgdown::deploy_site_github(ssh_id = Sys.getenv("TRAVIS_DEPLOY_KEY"))'
   skip_cleanup: true
